--- a/static/styles/room.css
+++ b/static/styles/room.css
@@ -1,91 +1,132 @@
-* {
-  /*margin: 0;*/
-  /*padding: 0;*/
-  box-sizing: border-box;
+
+
+
+.head-section {
+  padding: 20px;
+
+  border-bottom: 2.5px solid #7c3abc;
 }
 
-#messages {
+.room-topic {
+  text-align: left;
+  text-transform: capitalize;
+  font-weight: bold;
+}
+
+.chat-section {
+  padding: 20px;
+}
+
+.log-itemlist {
+  list-style: none;
   padding: 0px;
   margin: 0px;
-  list-style: none;
-
-  padding: 20px;
-  margin-bottom: 30px;
 
   display: flex;
   flex-direction: column;
-  /*justify-content: flex-start;*/
-  /*align-items: flex-start;*/
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
-.notify, .chat {
+.notify-item {
+  flex: 1 1 auto;
+  max-width: 95%;
+  align-self: center;
+  margin: 15px 10px;
+
+  padding: 6px 8px;
+  background-color: rgb(242, 242, 244);
+  color: #5c5c5c;
+  border-radius: 64px;
+
+  font-size: 12px;
+  text-align: center;
+}
+
+.chat-item {
+  flex: 1 1 auto;
+  max-width: 80%;
+
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
+  align-content: flex-start;
 
-  width: auto;
+  margin: 15px 10px;
+}
+
+.flex-right {
+  align-self: flex-end;
+}
+
+.flex-left {
+  align-self: flex-start;
+}
+
+.chat-item-head {
+  flex: 1 1 auto;
+
+  font-size: 12px;
+  color: #333333;
+  font-weight: bold;
+}
+
+.chat-item-chat {
+  flex: 1 1 auto;
+
+  font-size: 16px;
+  background-color: green;
+  margin-top: 15px;
 
   padding: 10px;
   border-radius: 8px;
 }
 
-.notify {
-  padding: 6px 8px;
-  border-radius: 12px;
-  background-color: #5c5c5c;
-  color: white;
-  margin-top: 15px;
-
-  align-self: center;
-
-  font-size: 12px;
+.my-chat {
+  background-color: #e399ff;
+  color: #333333;
 }
 
-.chat {
-  background-color: green;
-  margin-top: 15px;
-  max-width: 80%;
-  
+.others-chat {
+  background-color: #ffffff;
+  color: #0c0c0c;
+  box-shadow: -0px 0px 5px 1px #AAAAAA;
 }
 
-.right {
-  align-self: flex-end;
-  background-color: lightgreen;
-}
-
-.chat .sender {
-  color: purple;
-}
-
-.chat .text {
-
-}
-
-.chat .date {
-  font-size: 12px;
-  align-self: flex-end;
-}
-
-.keyboard {
-  background-color: rgb(180, 180, 180);
+.input-section {
   padding: 20px;
 
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: flex-start;
+  /*align-content: center;*/
 }
 
-.keyboard textarea {
-  display: block;
+.input-section input {
+  flex: 1 1 auto;
+  min-width: 100px;
+
+  border: 1.5px solid #5c5c5c;
+  border-radius: 64px;
   padding: 12px 14px;
-  width: 100%;
-  margin: 0px auto;
-  min-height: 100px;
-  border: black 1px solid;
 }
 
-.keyboard button {
-  margin-top: 10px;
-  padding: 6px 8px;
-  align-self: flex-end;
-  /*margin-left: auto;*/
+.input-section input:focus {
+  border: 1px solid #7c3abc;
+}
+
+.input-section button {
+  flex: 0 0 auto;
+  margin-left: 8px;
+
+  padding: 10px 12px;
+  background-color: #7c3abc;
+  color: #ffffff;
+  border: 1px solid #7c3abc;
+}
+
+.input-section button:hover {
+  background-color: #af69ef;
+  border: 1px solid #af69ef;
 }
 
