--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
   {% endblock %}
   
   {% block title %}
-  <title>Home</title>
+  <title>OutIn</title>
   {% endblock %}
 </head>
 <body>
@@ -29,6 +29,22 @@
   {% endblock %}
 
   <header>
+    {% block nav %}
+    <section>
+      <div>
+        {% if current_user.is_authenticated %}
+        <p><a href="{{ url_for('user_bp.index') }}">Home</a></p>
+        <p><a href="{{ url_for('user_bp.dashboard') }}">Dashboard</a></p>
+        <p><a href="{{ url_for('user_bp.logout') }}">Logout</a></p>
+        {% else %}
+        <p><a href="{{ url_for('user_bp.index') }}">Home</a></p>
+        <p><a href="{{ url_for('user_bp.register') }}">Register</a></p>
+        <p><a href="{{ url_for('user_bp.login') }}">Login</a></p>
+        {% endif %}
+      </div>
+    </section>
+    {% endblock %}
+
     {% block header %}
     {% endblock %}
   </header>
@@ -42,24 +58,12 @@
     </section>
 
     {% block main %}
-    <section>
-      <div></div>
-    </section>
-
-    <section>
-      <ul>
-        <li></li>
-      </ul>
-    </section>
     {% endblock %}
   </main>
 
 
   <footer>
     {% block footer %}
-    <div>
-      <p>Thank you!</p>
-    </div>
     {% endblock %}
   </footer>
 
