--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -14,18 +14,7 @@
 
 {% block main %}
 <section>
-  {% if current_user.is_authenticated %}
-  <p><a href="{{ url_for('room_bp.dashboard') }}">Dashboard</a></p>
-  <p><a href="{{ url_for('room_bp.create_room') }}">Create room</a></p>
-  <p><a href="{{ url_for('room_bp.join_room') }}">Join room</a></p>
-  <p><a href="{{ url_for('room_bp.logout') }}">Logout</a></p>
-  {% else %}
-  
-  <p><a href="{{ url_for('room_bp.create_room') }}">Create room</a></p>
-  <p><a href="{{ url_for('room_bp.join_room') }}">Join room</a></p>
-  <p><a href="{{ url_for('room_bp.register') }}">Register</a></p>
-  <p><a href="{{ url_for('room_bp.login') }}">Login</a></p>
-  {% endif %}
+  <p><a href="{{ url_for('room_bp.join_room') }}"><button>Join room</button></a></p>
 </section>
 
 <section>
