--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -26,7 +26,7 @@
     <button type="submit">Login</button>
   </form>
   <div>
-    <a href="{{ url_for('room_bp.register') }}"><button class="submit-btn-inverse">Register</button></a>
+    <a href="{{ url_for('user_bp.register') }}"><button class="submit-btn-inverse">Register</button></a>
     <span class="psw"><a href="#">Forgot password?</a></span>
   </div>
 </section>
