--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -26,7 +26,7 @@
     <button type="submit">Register</button>
   </form>
   <div>
-    <a href="{{ url_for('room_bp.login') }}"><button class="submit-btn-inverse">Login</button></a>
+    <a href="{{ url_for('user_bp.login') }}"><button class="submit-btn-inverse">Login</button></a>
   </div>
 </section>
 {% endblock %}
