--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -30,7 +30,7 @@ main {
   flex: 1 1 auto;
 
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: flex-start;
   align-items: stretch;
 }
