--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
   {% block default_styles %}
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/normalize.css') }}">
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/base.css') }}">
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/nav.css') }}">
   {% endblock %}
 
   {% block styles %}
@@ -30,19 +31,9 @@
 
   <header>
     {% block nav %}
-    <section>
-      <div>
-        {% if current_user.is_authenticated %}
-        <p><a href="{{ url_for('user_bp.index') }}">Home</a></p>
-        <p><a href="{{ url_for('user_bp.dashboard') }}">Dashboard</a></p>
-        <p><a href="{{ url_for('user_bp.logout') }}">Logout</a></p>
-        {% else %}
-        <p><a href="{{ url_for('user_bp.index') }}">Home</a></p>
-        <p><a href="{{ url_for('user_bp.register') }}">Register</a></p>
-        <p><a href="{{ url_for('user_bp.login') }}">Login</a></p>
-        {% endif %}
-      </div>
-    </section>
+    <nav class="top-nav">
+      <h2><a href="{{ url_for('user_bp.index') }}"><span>OutIn</span></a></h2>
+    </nav>
     {% endblock %}
 
     {% block header %}
@@ -51,14 +42,72 @@
   
 
   <main>
-    <section>
-      {% for message in get_flashed_messages() %}
-      <div>{{ message }}</div>
-      {% endfor %}
-    </section>
-
-    {% block main %}
+    {% block side_nav %}
+    <nav class="side-nav">
+      <ul class="main-menu">
+        <li class="menu-heading">
+          <a href="{{ url_for('user_bp.index') }}"><span>Home</span></a>
+        </li>
+        {% if current_user.is_authenticated %}
+        <li class="menu-heading">
+          <a href="{{ url_for('user_bp.dashboard') }}"><span>Dashboard</span></a>
+        </li>
+        <li class="menu-heading">
+          <a href="#"><span>Profile</span></a>
+        </li>
+        <li class="menu-heading">
+          <a href="#"><span>Direct Messages</span></a>
+        </li>
+        <li class="menu-heading">
+          <a href="#"><span>Rooms</span></a>
+        </li>
+        <li class="menu-heading">
+          <a href="#"><span>Sessions</span></a>
+        </li>
+        <li class="menu-heading">
+          <a href="#"><span>Calendar</span></a>
+        </li>
+        <li class="menu-heading">
+          <a href="#"><span>Enterprises</span></a>
+          {% set joined_enterprises = current_user.get_joined_enterprises() %}
+          {% if joined_enterprises %}
+          <ul class="sub-menu">
+            {% for ent in joined_enterprises %}
+            <li class="menu-subheading">
+              <a href="{{ url_for('ent_bp.dashboard', _id=ent.id) }}"><span>{{ ent.name }}</span></a>
+            </li>
+            {% endfor %}
+          </ul>
+          {% endif %}
+        </li>
+        <li class="menu-heading">
+          <a href="#"><span>Settings</span></a>
+        </li>
+        <li class="menu-heading">
+          <a href="{{ url_for('user_bp.logout') }}"><span>Logout</span></a>
+        </li>
+        {% else %}
+        <li class="menu-heading">
+          <a href="{{ url_for('user_bp.register') }}"><span>Register</span></a>
+        </li>
+        <li class="menu-heading">
+          <a href="{{ url_for('user_bp.login') }}"><span>Login</span></a>
+        </li>
+        {% endif %}
+      </ul>
+    </nav>
     {% endblock %}
+
+    <article class="main-content">
+      <section>
+        {% for message in get_flashed_messages() %}
+        <div>{{ message }}</div>
+        {% endfor %}
+      </section>
+
+      {% block main %}
+      {% endblock %}
+    </article>
   </main>
 
 
