Add room list, leave and delete features

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
           <a href="#"><span>Direct Messages</span></a>
         </li>
         <li class="menu-heading">
-          <a href="#"><span>Rooms</span></a>
+          <a href="{{ url_for('room_bp.joined_list') }}"><span>Rooms</span></a>
         </li>
         <li class="menu-heading">
           <a href="#"><span>Sessions</span></a>
