--- a/templates/room/lounge.html
+++ b/templates/room/lounge.html
@@ -27,7 +27,7 @@
 <section class="content-section">
   <h2 class="room-topic">{{ room.topic }}</h2>
   <span class="room-number">room number: {{ room.number }}</span>
-  <span class="room-info">{{ room.members.all().__len__() }} member(s)</span>
+  <span class="room-info">{{ room.get_active("members").all().__len__() }} member(s)</span>
 </section>
 
 
