--- a/static/styles/room.css
+++ b/static/styles/room.css
@@ -7,6 +7,11 @@
   border-bottom: 2.5px solid #7c3abc;
 }
 
+.head-section a {
+  text-decoration: none;
+  color: #7c3abc;
+}
+
 .room-topic {
   text-align: left;
   text-transform: capitalize;
