--- a/templates/room/create.html
+++ b/templates/room/create.html
@@ -28,7 +28,7 @@
     
     {{ create_form(form) }}
 
-    <button type="submit">Create</button>
+    <button type="submit">Next</button>
   </form>
 </section>
 {% endblock %}
