--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
           <a href="#"><span>Profile</span></a>
         </li>
         <li class="menu-heading">
-          <a href="#"><span>Notifications</span></a>
+          <a href="{{ url_for('user_bp.list_notifications') }}"><span>Notifications</span></a>
         </li>
         <li class="menu-heading">
           <a href="{{ url_for('room_bp.joined_list') }}"><span>Rooms</span></a>
