--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,7 @@
+{% from "utils.html" import flash_messages %}
+
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -77,11 +81,7 @@
     {% endblock %}
 
     <article class="main-content">
-      <section>
-        {% for message in get_flashed_messages() %}
-        <div>{{ message }}</div>
-        {% endfor %}
-      </section>
+      {{ flash_messages() }}
 
       {% block main %}
       {% endblock %}
