Update rooms and notifications page and add unread feature to them

--- a/templates/room/joined-list.html
+++ b/templates/room/joined-list.html
@@ -19,36 +19,35 @@
 
 {% block main %}
 <section class="up">
-  <a href="{{ url_for('room_bp.create_room') }}"><button>Create room</button></a>
-  <a href="{{ url_for('room_bp.join_room') }}"><button class="up-btn-inverse">Join room</button></a>
+  <h2>Rooms</h2>
+  <a href="{{ url_for('room_bp.create_room') }}"><button>Create</button></a>
+  <a href="{{ url_for('room_bp.join_room') }}"><button class="up-btn-inverse">Join</button></a>
 </section>
 
 <section class="down">
-  <h2>Rooms</h2>
-
   <ul class="room-itemlist">
     {% if memb_profiles %}
     {% for profile in memb_profiles %}
     {% set room = profile.room %}
-    <li class="room-item">
-      <a href="{{ url_for('room_bp.lounge', room=room) }}">
+    <li>
+      <a class="room-item" href="{{ url_for('room_bp.lounge', room=room) }}">
         <div class="room-card">
           <div class="room-card-left">
             <span class="room-topic">{{ room.topic }}</span>
-            {% if room.logs.all() %}
-            <span class="room-lastlog">{{ room.logs.all()[-1].info }}</span>
+            {% if room.admin == current_user and not room.is_active %}
+            <span class="room-lastlog input-error">Draft: Room not fully created. Tap to continue.</span>
+            {% elif profile.allow_username_edit %}
+            <span class="room-lastlog input-error">You have not joined completely. Tap to Finish.</span>
+            {% elif room.logs.all() %}
+            <span class="room-lastlog">{{ room.logs.all()[-1].member.username }}: {{ room.logs.all()[-1].info }}</span>
             {% endif %}
           </div>
           <div class="room-card-right">
-            <!-- <span class="room-number">RM {{ room.number }}</span> -->
-            {% if room.logs.all() %}
+            {% if not profile.allow_username_edit and room.logs.all() %}
             <span class="room-lastlogdate">{{ room.logs.all()[-1].logged_at.strftime("%b %d") }}</span>
+            <span class="room-unreadlog">{{ room.logs.all().__len__() }}</span>
             {% endif %}
           </div>
-
-          {% if room.admin == current_user %}
-          <button class="card-tag">admin</button>
-          {% endif %}
         </div>
       </a>
     </li>
