--- a/static/styles/dashboard.css
+++ b/static/styles/dashboard.css
@@ -5,12 +5,16 @@
   padding: 20px;
 }
 
+.down {
+  padding: 50px 20px 70px;
+}
+
 .up {
   border-bottom: 2.5px solid #7c3abc;
 }
 
 .up button {
-  padding: 10px 14px;
+  padding: 8px 14px;
   background-color: #7c3abc;
   color: #ffffff;
   border: 2.5px solid #7c3abc;
@@ -20,7 +24,7 @@
 }
 
 .up .up-btn-inverse {
-  padding: 10px 14px;
+  padding: 8px 14px;
   background-color: #ffffff;
   color: #7c3abc;
   border: 2.5px solid #7c3abc;
@@ -40,21 +44,25 @@
   padding: 0px;
 }
 
-.room-item {
-  padding: 10px;
-  border: 2px solid #7c3abc;
-}
-
-.room-item:hover {
-  background: lightblue;
-}
-
-.room-item + .room-item {
+.room-itemlist li + li {
   margin-top: 20px;
 }
 
-.room-item a {
+.room-item {
+  padding: 20px;
+  border: 2px solid #7c3abc;
+  border-radius: 4px;
+
+  display: block;
+}
+
+.room-itemlist a {
   text-decoration: none;
+}
+
+.room-itemlist a:hover {
+  background-color: #e7e9ea;
+  color: white;
 }
 
 .room-card {
@@ -79,18 +87,26 @@
   font-size: 16px;
   color: #0c0c0c;
 
-  text-transform: capitalize;
   font-weight: bold;
 }
 
+.room-topic-read {
+  color: #222222;
+  font-weight: normal;
+}
+
 .room-lastlog {
-  font-size: 12px;
-  color: gray;
-  margin-top: 4px;
+  font-size: 14px;
+  color: #555555;
+  margin-top: 10px;
+}
+
+.input-error {
+  color: #ff0039;
 }
 
 .room-card-right {
-  flex: 0 1 auto;
+  flex: 0 0 auto;
 
   display: flex;
   flex-direction: column;
@@ -101,20 +117,21 @@
 }
 
 .room-lastlogdate {
-  font-size: 12px;
-  color: gray;
+  align-self: center;
+  font-size: 14px;
+  color: #555555;
 }
 
-.card-tag {
-  position: absolute;
-  top: -20px;
-  right: 0px;
+.room-unreadlog {
+  align-self: center;
+  margin-top: 10px;
 
-  font-size: 10px;
-  border: 1.5px solid #af69ef;
-  background-color: none;
+  font-size: 14px;
+  border-width: 0px;
+  background-color: #7c3abc;
   border-radius: 64px;
 
-  padding: 6px 8px;
+  padding: 3px 5px;
+  color: #ffffff;
 }
 
