--- a/static/styles/nav.css
+++ b/static/styles/nav.css
@@ -41,7 +41,7 @@
 }
 
 .side-nav {
-  flex: 1 0 auto;
+  flex: 0 0 auto;
   
   /*position: fixed;*/
   position: relative;
@@ -57,7 +57,7 @@
 
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  /*min-height: 100vh;*/
 }
 
 .side-nav ul {
@@ -145,13 +145,26 @@
   margin: 0px;
 }
 
+.count-bubble {
+  margin-left: auto;
+
+  font-size: 14px;
+  border-width: 0px;
+  background-color: var(--side-nav-bgColor-hover);
+  border-radius: 64px;
+
+  padding: 3px 5px;
+  color: #7c3abc;
+  display: inline-block;
+}
+
 .main-content {
   flex: 1 1 auto;
   
   /*position: relative;*/
   /*left: var(--side-nav-width);*/
   width: calc(100% - var(--side-nav-width));
-  min-height: 100vh;
+  /*min-height: 100vh;*/
   /*padding: 30px;*/
   color: var(--main-content-txtColor);
   background: var(--main-content-bgColor);
