--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
     <nav class="side-nav">
       <ul class="main-menu">
         <li class="menu-heading">
-          <a href="{{ url_for('user_bp.index') }}"><span>Home</span></a>
+          <a href="{{ url_for('user_bp.index') }}"><span>Find Room</span></a>
         </li>
         {% if current_user.is_authenticated %}
         <li class="menu-heading">
